<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="apps.ecooksey.rpeloadcalc.RpeLoadViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/text_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/have" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{viewModel.haveWeightError}">

                        <EditText
                            android:id="@+id/have_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/weight_label"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{viewModel.haveRepsError}">

                        <EditText
                            android:id="@+id/have_reps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/reps_label"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{viewModel.haveRpeError}">

                        <EditText
                            android:id="@+id/have_rpe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rpe_label"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/e1rm_weight"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@{viewModel.e1rm}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/want" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{viewModel.wantRepsError}">

                        <EditText
                            android:id="@+id/want_reps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/reps_label"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{viewModel.wantRpeError}">

                        <EditText
                            android:id="@+id/want_rpe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rpe_label"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <!--Cheezy way of doing this spacing but ehhh lazy I guess-->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/want_weight"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@{viewModel.wantWeight}" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_container"
                android:layout_marginTop="20dp"
                android:text="@string/calculate"
                android:theme="@style/ButtonTheme" />

            <TextView
                android:id="@+id/licensing"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_calculate"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                app:linkedText="@{viewModel.licenseText}" />
        </RelativeLayout>

    </ScrollView>
</layout>